--- a/templates/cafes.html
+++ b/templates/cafes.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en">
 	<head>
-		<title>Coffee & WiFi</title>
+		<title>The Wifi Cafe Zone</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -83,7 +83,7 @@
                             </ul>
 
                             <ul class="copyright">
-                                <li>&copy; COFFEE_&_WiFi. All rights reserved.</li><li>MysticTitan</li>
+                                <li>&copy; {{current_year}} Cafe_Compass. All rights reserved.</li><li>MysticTitan</li>
                             </ul>
 
                         </div>
