--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en">
 	<head>
-		<title>Coffee & WiFi</title>
+		<title>The Wifi Cafe Zone</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -18,7 +18,7 @@
 		<!-- Header -->
 			<div id="header">
 				<span class="coffee-mug"><img src="static/images/cofee-cup-logo.png"></span>
-				<h1>Coffee & Wi-Fi</h1>
+				<h1>Cafe Compass</h1>
 				<hr width="30%" style="display:inline-block; border:1px solid white"/>
 				<p>Looking for the perfect cafe to work or chill? You’re in the right place!</p>
 				<hr width="50%" style="display:inline-block;border:1px solid white"/>
@@ -107,7 +107,7 @@
 					</ul>
 
 					<ul class="copyright">
-						<li>&copy; COFFEE_&_WiFi. All rights reserved.</li><li>MysticTitan</li>
+						<li>&copy;{{current_year}} Cafe_Compass. All rights reserved.</li><li>MysticTitan</li>
 					</ul>
 
 				</div>
